WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82306
[chromium] Fix crash with fling with tracing enabled
https://bugs.webkit.org/show_bug.cgi?id=82306
Summary
[chromium] Fix crash with fling with tracing enabled
Nat Duca
Reported
2012-03-27 01:22:55 PDT
[chromium] Fix crash with fling with tracing enabled
Attachments
Patch
(2.53 KB, patch)
2012-03-27 01:30 PDT
,
Nat Duca
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.53 KB, patch)
2012-03-27 01:39 PDT
,
Nat Duca
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nat Duca
Comment 1
2012-03-27 01:30:53 PDT
Created
attachment 133999
[details]
Patch
Nat Duca
Comment 2
2012-03-27 01:39:33 PDT
Created
attachment 134000
[details]
Patch for landing
WebKit Review Bot
Comment 3
2012-03-27 02:48:40 PDT
Comment on
attachment 134000
[details]
Patch for landing Clearing flags on attachment: 134000 Committed
r112235
: <
http://trac.webkit.org/changeset/112235
>
WebKit Review Bot
Comment 4
2012-03-27 02:48:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug