[chromium] Fix crash with fling with tracing enabled https://bugs.webkit.org/show_bug.cgi?id=82306

The TRACE_EVENT_START instrumentation was deferencing a PassOwnPtr
after it had been passed into another OwnPtr. This caused frequent
crashes when tracing was enabled.

Reviewed by Adam Barth.

* platform/ActivePlatformGestureAnimation.cpp:
(WebCore::ActivePlatformGestureAnimation::ActivePlatformGestureAnimation):
* platform/graphics/chromium/cc/CCActiveGestureAnimation.cpp:
(WebCore::CCActiveGestureAnimation::CCActiveGestureAnimation):


Canonical link: https://commits.webkit.org/99672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112235 268f45cc-cd09-0410-ab3c-d52691b4dbfc